--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shark Tapper</title>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
     * {
       box-sizing: border-box;
@@ -71,11 +70,13 @@
     }
     .floating-text {
       position: absolute;
-      font-size: 18px;
-      color: #3cba54;
-      font-weight: 600;
+      font-size: 24px;
+      color: #0f0;
+      font-weight: bold;
+      text-shadow: 1px 1px 2px black;
       animation: floatUp 1s ease-out forwards;
       pointer-events: none;
+      z-index: 1000;
     }
     @keyframes floatUp {
       0% {
@@ -153,94 +154,75 @@
   <div class="game-container">
     <div class="balance">Токены: <span id="token-count">0</span></div>
     <div class="progress"><div class="progress-bar" id="progress-bar"></div></div>
-    <img src="https://downloader.disk.yandex.ru/preview/6eaed1745a897d6c6633735234afc066db821f20c02f6c7f1d7613be378f1de0/67fb12cc/vB83ouN2ytmSTDcwX8zYsF-htolnfJL3xcxvmjYCh4XK-2_audFLuSmeLVKFAfboM6h6IdZGXbQp0l-rU_YDiw%3D%3D?uid=0&filename=_image.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&owner_uid=0&tknv=v2&size=1366x651" class="tap-image" id="tap-area" alt="shark">
+    <img src="original.png" class="tap-image" id="tap-area" alt="shark">
     <div class="achievements" id="achievements">Достижения: 0</div>
     <div id="achievement-icons"></div>
     <button class="shop-button" onclick="openShop()">Магазин</button>
     <div class="shop-modal" id="shop-modal">
       <div class="shop-item">
-        <img src="https://downloader.disk.yandex.ru/preview/6eaed1745a897d6c6633735234afc066db821f20c02f6c7f1d7613be378f1de0/67fb12cc/vB83ouN2ytmSTDcwX8zYsF-htolnfJL3xcxvmjYCh4XK-2_audFLuSmeLVKFAfboM6h6IdZGXbQp0l-rU_YDiw%3D%3D?uid=0&filename=_image.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&owner_uid=0&tknv=v2&size=1366x651" alt="Оригинальный">
+        <img src="original.png" alt="Оригинальный">
         <div>Оригинальный (установлено)</div>
         <button onclick="selectSkin('default')">Выбрать</button>
       </div>
       <div class="shop-item">
-        <img src="https://downloader.disk.yandex.ru/preview/04eb091a2903be4d5af5cbcdb1150d34f4c1993cc6c73ad39c2ca69d9fc29da5/67fb1ade/Isc8GDZYol9Y-mzUAz8K8W8rzkJLlZu5mvVdzxcVqptvnjQssbrTJnjN6Xhn_5wwsRoW-K4oSvCepaSSgv7H4Q%3D%3D" alt="Leopard">
+        <img src="leopard.png" alt="Leopard">
         <div>Скин Леопард (5)</div>
         <button onclick="buySkin('leopard', 5)">Купить</button>
       </div>
       <div class="shop-item">
-        <img src="https://downloader.disk.yandex.ru/preview/1343602687185b913ad2602956493ff421e1b4f904f72f7c206f7a790789db88/67fb1af3/OS-bpSyN7QRTFglZ9F3K-5WXBMwaJllCAz-v3kWh601w2jtm3bHrRv2ik77Z8OQi78ALQG-fKM0rCVt1GBjOSg%3D%3D" alt="Gold">
+        <img src="gold.png" alt="Gold">
         <div>Скин Голд (5)</div>
         <button onclick="buySkin('gold', 5)">Купить</button>
       </div>
       <button class="shop-button" onclick="closeShop()">Закрыть</button>
     </div>
   </div>
-
   <script>
-    const tg = window.Telegram.WebApp;
-    tg.ready();
-    tg.expand();
-
     let currentSkin = 'default';
-    let balance = parseInt(localStorage.getItem('balance')) || 0;
-
-    const tokenCount = document.getElementById('token-count');
-    tokenCount.textContent = balance;
-
-    const tapArea = document.getElementById('tap-area');
-    const progressBar = document.getElementById('progress-bar');
-
-    tapArea.addEventListener('click', (e) => {
-      balance++;
-      tokenCount.textContent = balance;
-      localStorage.setItem('balance', balance);
-      showFloatingText('+1', e.clientX, e.clientY);
-      progressBar.style.width = (balance % 100) + '%';
-    });
+    let balance = 0;
 
     function openShop() {
       document.getElementById('shop-modal').style.display = 'flex';
     }
-
     function closeShop() {
       document.getElementById('shop-modal').style.display = 'none';
     }
-
     function selectSkin(skin) {
       currentSkin = skin;
       updateSkin();
       alert(`Скин '${skin}' выбран!`);
     }
-
     function buySkin(skin, price) {
       if (balance >= price) {
         balance -= price;
-        tokenCount.textContent = balance;
-        localStorage.setItem('balance', balance);
+        document.getElementById('token-count').textContent = balance;
         selectSkin(skin);
         alert(`Скин '${skin}' куплен за ${price} токенов!`);
-
-        // Отправим в Telegram
-        tg.sendData(JSON.stringify({
-          action: 'buy_skin',
-          skin: skin,
-          balance: balance
-        }));
       } else {
         alert('Недостаточно токенов!');
       }
     }
-
     function updateSkin() {
+      const tapArea = document.getElementById('tap-area');
       if (currentSkin === 'leopard') {
-        tapArea.src = 'https://downloader.disk.yandex.ru/preview/04eb091a2903be4d5af5cbcdb1150d34f4c1993cc6c73ad39c2ca69d9fc29da5/67fb1ade/Isc8GDZYol9Y-mzUAz8K8W8rzkJLlZu5mvVdzxcVqptvnjQssbrTJnjN6Xhn_5wwsRoW-K4oSvCepaSSgv7H4Q%3D%3D';
+        tapArea.src = 'leopard.png';
       } else if (currentSkin === 'gold') {
-        tapArea.src = 'https://downloader.disk.yandex.ru/preview/1343602687185b913ad2602956493ff421e1b4f904f72f7c206f7a790789db88/67fb1af3/OS-bpSyN7QRTFglZ9F3K-5WXBMwaJllCAz-v3kWh601w2jtm3bHrRv2ik77Z8OQi78ALQG-fKM0rCVt1GBjOSg%3D%3D';
+        tapArea.src = 'gold.png';
       } else {
-        tapArea.src = 'https://downloader.disk.yandex.ru/preview/6eaed1745a897d6c6633735234afc066db821f20c02f6c7f1d7613be378f1de0/67fb12cc/vB83ouN2ytmSTDcwX8zYsF-htolnfJL3xcxvmjYCh4XK-2_audFLuSmeLVKFAfboM6h6IdZGXbQp0l-rU_YDiw%3D%3D';
+        tapArea.src = 'original.png';
       }
     }
+
+    const tapArea = document.getElementById('tap-area');
+    const tokenCount = document.getElementById('token-count');
+    const progressBar = document.getElementById('progress-bar');
+
+    tapArea.addEventListener('click', (e) => {
+      balance++;
+      tokenCount.textContent = balance;
+      showFloatingText('+1', e.clientX, e.clientY);
+      progressBar.style.width = (balance % 100) + '%';
+    });
 
     function showFloatingText(text, x, y) {
       const floatText = document.createElement('div');
