--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
       justify-content: space-between;
     }
     .balance {
-      color: #333;
+      color: #111;
       font-size: 22px;
       text-align: center;
+      font-weight: bold;
     }
     .progress {
       width: 100%;
@@ -70,13 +71,12 @@
     }
     .floating-text {
       position: absolute;
-      font-size: 24px;
-      color: #0f0;
-      font-weight: bold;
-      text-shadow: 1px 1px 2px black;
+      font-size: 18px;
+      color: #3cba54;
+      font-weight: 700;
       animation: floatUp 1s ease-out forwards;
       pointer-events: none;
-      z-index: 1000;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
     }
     @keyframes floatUp {
       0% {
