--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
       margin: 0;
       padding: 0;
     }
-    body {
+    html, body {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
       background: linear-gradient(160deg, #e8ecef, #cfd8dc);
       font-family: 'Segoe UI', sans-serif;
-      height: 100vh;
-      overflow: hidden;
     }
     .game-container {
       position: absolute;
@@ -38,36 +39,16 @@
     .balance {
       color: #111;
       font-size: 22px;
-      text-align: center;
       font-weight: bold;
     }
-    .progress {
-      width: 100%;
-      background: #f1f1f1;
-      border-radius: 10px;
-      overflow: hidden;
-      height: 14px;
-      margin: 10px 0;
-    }
-    .progress-bar {
-      height: 100%;
-      width: 0%;
-      background-color: #3cba54;
-      transition: width 0.3s ease;
-    }
     .tap-image {
-      max-width: 80%;
-      height: auto;
-      object-fit: contain;
+      max-width: 100%;
       cursor: pointer;
-      user-select: none;
-      border-radius: 20px;
-      transition: transform 0.1s ease;
-      display: block;
-      margin: 0 auto;
+      transition: transform 0.1s;
+      border-radius: 16px;
     }
     .tap-image:active {
-      transform: scale(0.96);
+      transform: scale(0.94);
     }
     .floating-text {
       position: absolute;
@@ -82,6 +63,10 @@
       0% { opacity: 1; transform: translateY(0); }
       100% { opacity: 0; transform: translateY(-50px); }
     }
+    .menu-buttons {
+      display: flex;
+      gap: 12px;
+    }
     .shop-button {
       background: #3cba54;
       color: white;
@@ -89,7 +74,7 @@
       padding: 10px 16px;
       border-radius: 10px;
       cursor: pointer;
-      margin: 6px;
+      font-size: 16px;
     }
     .shop-modal, .booster-modal {
       position: absolute;
@@ -127,8 +112,38 @@
 </head>
 <body>
   <div class="game-container">
-    <!-- unchanged content -->
+    <div class="balance" id="tokenCount">0 токенов</div>
+    <img src="images/shark.png" class="tap-image" onclick="handleTap()" alt="Shark" />
+    <div class="menu-buttons">
+      <button class="shop-button" onclick="openShop()">Магазин</button>
+      <button class="shop-button" onclick="openBoosters()">Бустеры</button>
+    </div>
   </div>
+
+  <div id="shop-modal" class="shop-modal">
+    <div class="shop-item">
+      <img src="images/shark_skin1.png" />
+      <button onclick="buySkin('skin1', 20)">Купить (20 токенов)</button>
+    </div>
+    <div class="shop-item">
+      <img src="images/shark_skin2.png" />
+      <button onclick="buySkin('skin2', 50)">Купить (50 токенов)</button>
+    </div>
+    <button onclick="closeShop()">Закрыть</button>
+  </div>
+
+  <div id="booster-modal" class="booster-modal">
+    <div class="booster-item">
+      <div>Авто-Тап +1 (50 токенов)</div>
+      <button onclick="buyBooster(50, 1)">Купить</button>
+    </div>
+    <div class="booster-item">
+      <div>Авто-Тап +2 (100 токенов)</div>
+      <button onclick="buyBooster(100, 2)">Купить</button>
+    </div>
+    <button onclick="closeBoosters()">Закрыть</button>
+  </div>
+
   <script>
     let currentSkin = localStorage.getItem('currentSkin') || 'default';
     let balance = parseInt(localStorage.getItem('balance')) || 0;
@@ -136,12 +151,50 @@
     let autoTap = parseInt(localStorage.getItem('autoTap')) || 0;
     let ownedBoosters = JSON.parse(localStorage.getItem('ownedBoosters')) || { 1: false, 2: false };
 
+    const tokenCount = document.getElementById('tokenCount');
+    const tapImage = document.querySelector('.tap-image');
+
     function saveProgress() {
       localStorage.setItem('balance', balance);
       localStorage.setItem('ownedSkins', JSON.stringify(ownedSkins));
       localStorage.setItem('currentSkin', currentSkin);
       localStorage.setItem('autoTap', autoTap);
       localStorage.setItem('ownedBoosters', JSON.stringify(ownedBoosters));
+    }
+
+    function handleTap() {
+      balance++;
+      tokenCount.textContent = `${balance} токенов`;
+      saveProgress();
+    }
+
+    function openShop() {
+      document.getElementById('shop-modal').style.display = 'flex';
+    }
+
+    function closeShop() {
+      document.getElementById('shop-modal').style.display = 'none';
+    }
+
+    function buySkin(skinId, price) {
+      if (ownedSkins[skinId]) {
+        currentSkin = skinId;
+      } else if (balance >= price) {
+        balance -= price;
+        ownedSkins[skinId] = true;
+        currentSkin = skinId;
+      }
+      tokenCount.textContent = `${balance} токенов`;
+      saveProgress();
+    }
+
+    function openBoosters() {
+      document.getElementById('booster-modal').style.display = 'flex';
+      updateBoosterTexts();
+    }
+
+    function closeBoosters() {
+      document.getElementById('booster-modal').style.display = 'none';
     }
 
     function updateBoosterTexts() {
@@ -168,7 +221,7 @@
         balance -= price;
         autoTap += increment;
         ownedBoosters[increment] = true;
-        tokenCount.textContent = balance;
+        tokenCount.textContent = `${balance} токенов`;
         updateBoosterTexts();
         saveProgress();
       } else if (ownedBoosters[increment]) {
@@ -178,10 +231,18 @@
       }
     }
 
-    function openBoosters() {
-      document.getElementById('booster-modal').style.display = 'flex';
-      updateBoosterTexts();
+    function startAutoTap() {
+      setInterval(() => {
+        if (autoTap > 0) {
+          balance += autoTap;
+          tokenCount.textContent = `${balance} токенов`;
+          saveProgress();
+        }
+      }, 1000);
     }
+
+    tokenCount.textContent = `${balance} токенов`;
+    startAutoTap();
   </script>
 </body>
 </html>
