--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <body>
   <div class="game-container">
     <div class="balance" id="tokenCount">0 токенов</div>
-    <img src="images/shark.png" class="tap-image" onclick="handleTap()" alt="Shark" />
+    <img src="shark.png" class="tap-image" onclick="handleTap()" alt="Shark" />
     <div class="menu-buttons">
       <button class="shop-button" onclick="openShop()">Магазин</button>
       <button class="shop-button" onclick="openBoosters()">Бустеры</button>
@@ -122,11 +122,11 @@
 
   <div id="shop-modal" class="shop-modal">
     <div class="shop-item">
-      <img src="images/shark_skin1.png" />
+      <img src="shark_skin1.png" />
       <button onclick="buySkin('skin1', 20)">Купить (20 токенов)</button>
     </div>
     <div class="shop-item">
-      <img src="images/shark_skin2.png" />
+      <img src="shark_skin2.png" />
       <button onclick="buySkin('skin2', 50)">Купить (50 токенов)</button>
     </div>
     <button onclick="closeShop()">Закрыть</button>
