--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
   <meta http-equiv="Expires" content="0" />
   <title>Shark Tapper</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-analytics-compat.js"></script>
   <style>
     * {
       box-sizing: border-box;
@@ -55,8 +52,13 @@
       transition: transform 0.1s;
       border-radius: 16px;
     }
-    .tap-image:active {
-      transform: scale(0.94);
+    .tap-animation {
+      animation: tapPulse 0.2s ease;
+    }
+    @keyframes tapPulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(0.9); }
+      100% { transform: scale(1); }
     }
     .floating-text {
       position: absolute;
@@ -138,6 +140,10 @@
       <img src="shark_skin2.png?v=1" />
       <button onclick="buySkin('skin2', 50)">Купить / Выбрать</button>
     </div>
+    <div class="shop-item">
+      <img src="shark_skin3.png?v=1" />
+      <button onclick="buySkin('skin3', 100)">Купить / Выбрать</button>
+    </div>
     <button onclick="closeShop()">Закрыть</button>
   </div>
 
@@ -154,19 +160,7 @@
   </div>
 
   <script>
-    firebase.initializeApp({
-      apiKey: "AIzaSyDgi8vq_3Wpky7o_bzWbVuKRtOShGjd5o4",
-      authDomain: "tralalero-fec07.firebaseapp.com",
-      databaseURL: "https://tralalero-fec07-default-rtdb.firebaseio.com",
-      projectId: "tralalero-fec07",
-      storageBucket: "tralalero-fec07.firebasestorage.app",
-      messagingSenderId: "322571108862",
-      appId: "1:322571108862:web:14f4fe3a8168abab19c0af",
-      measurementId: "G-CB7BFKYSEZ"
-    });
-    const analytics = firebase.analytics();
-    const db = firebase.database();
-
+    const dbUrl = 'https://tralalero-fec07-default-rtdb.firebaseio.com';
     let currentSkin = 'default';
     let balance = 0;
     let ownedSkins = { default: true };
@@ -180,7 +174,8 @@
     const skinPaths = {
       default: 'shark.png?v=1',
       skin1: 'shark_skin1.png?v=1',
-      skin2: 'shark_skin2.png?v=1'
+      skin2: 'shark_skin2.png?v=1',
+      skin3: 'shark_skin3.png?v=1'
     };
 
     function updateSkin() {
@@ -189,30 +184,29 @@
 
     function saveProgress() {
       if (!userId) return;
-      db.ref('users/' + userId).set({
-        balance,
-        currentSkin,
-        ownedSkins,
-        autoTap,
-        ownedBoosters
+      fetch(`${dbUrl}/users/${userId}.json`, {
+        method: 'PUT',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ balance, currentSkin, ownedSkins, autoTap, ownedBoosters })
       });
     }
 
     function loadProgress() {
-      db.ref('users/' + userId).once('value').then(snapshot => {
-        const data = snapshot.val();
-        if (data) {
-          balance = data.balance || 0;
-          currentSkin = data.currentSkin || 'default';
-          ownedSkins = data.ownedSkins || { default: true };
-          autoTap = data.autoTap || 0;
-          ownedBoosters = data.ownedBoosters || { 1: false, 2: false };
-
-          tokenCount.textContent = `${balance} токенов`;
-          updateSkin();
-          updateBoosterTexts();
-        }
-      });
+      if (!userId) return;
+      fetch(`${dbUrl}/users/${userId}.json`)
+        .then(res => res.json())
+        .then(data => {
+          if (data) {
+            balance = data.balance || 0;
+            currentSkin = data.currentSkin || 'default';
+            ownedSkins = data.ownedSkins || { default: true };
+            autoTap = data.autoTap || 0;
+            ownedBoosters = data.ownedBoosters || { 1: false, 2: false };
+            tokenCount.textContent = `${balance} токенов`;
+            updateSkin();
+            updateBoosterTexts();
+          }
+        });
     }
 
     function showFloatingText(text) {
@@ -230,6 +224,8 @@
       balance++;
       tokenCount.textContent = `${balance} токенов`;
       showFloatingText("+1");
+      tapImage.classList.add("tap-animation");
+      setTimeout(() => tapImage.classList.remove("tap-animation"), 200);
       saveProgress();
     }
 
@@ -321,7 +317,6 @@
 
         userId = Telegram.WebApp.initDataUnsafe?.user?.id?.toString();
         if (userId) {
-          updateSkin();
           loadProgress();
           startAutoTap();
         } else {
