--- a/index.html
+++ b/index.html
@@ -22,6 +22,25 @@
       font-family: 'Segoe UI', sans-serif;
       touch-action: manipulation;
     }
+    .loading-screen {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background: #fff;
+      z-index: 9999;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    .loading-screen img {
+      max-width: 80%;
+    }
+    .loading-screen span {
+      font-size: 20px;
+      margin-top: 12px;
+      color: #333;
+    }
     .game-container {
       position: absolute;
       left: 50%;
@@ -121,7 +140,12 @@
   </style>
 </head>
 <body>
-  <div class="game-container">
+  <div class="loading-screen" id="loading">
+    <img src="w1.png" alt="Loading..." />
+    <span>Приключение 2025</span>
+  </div>
+
+  <div class="game-container" style="display:none" id="gameContainer">
     <div class="balance" id="tokenCount">0 токенов</div>
     <img id="tapImage" class="tap-image" src="" onclick="handleTap()" alt="Shark" />
     <div class="menu-buttons">
@@ -133,16 +157,16 @@
 
   <div id="shop-modal" class="shop-modal">
     <div class="shop-item">
-      <img src="shark_skin1.png?v=1" />
-      <button onclick="buySkin('skin1', 20)">Купить / Выбрать</button>
+      <img src="shark.png?v=1" />
+      <button onclick="buySkin('default', 0)">Выбрать</button>
     </div>
     <div class="shop-item">
       <img src="shark_skin2.png?v=1" />
-      <button onclick="buySkin('skin2', 50)">Купить / Выбрать</button>
+      <button onclick="buySkin('skin2', 1000)">Купить / Выбрать</button>
     </div>
     <div class="shop-item">
       <img src="shark_skin3.png?v=1" />
-      <button onclick="buySkin('skin3', 100)">Купить / Выбрать</button>
+      <button onclick="buySkin('skin3', 500)">Купить / Выбрать</button>
     </div>
     <button onclick="closeShop()">Закрыть</button>
   </div>
@@ -156,6 +180,10 @@
       <div class="booster-info">Авто-Тап +2 (100 токенов)</div>
       <button onclick="buyBooster(100, 2)">Купить</button>
     </div>
+    <div class="booster-item">
+      <div class="booster-info">Авто-Тап +3 (1000 токенов)</div>
+      <button onclick="buyBooster(1000, 3)">Купить</button>
+    </div>
     <button onclick="closeBoosters()">Закрыть</button>
   </div>
 
@@ -165,15 +193,16 @@
     let balance = 0;
     let ownedSkins = { default: true };
     let autoTap = 0;
-    let ownedBoosters = { 1: false, 2: false };
+    let ownedBoosters = { 1: false, 2: false, 3: false };
     let userId = null;
 
     const tokenCount = document.getElementById('tokenCount');
     const tapImage = document.getElementById('tapImage');
+    const gameContainer = document.getElementById('gameContainer');
+    const loadingScreen = document.getElementById('loading');
 
     const skinPaths = {
       default: 'shark.png?v=1',
-      skin1: 'shark_skin1.png?v=1',
       skin2: 'shark_skin2.png?v=1',
       skin3: 'shark_skin3.png?v=1'
     };
@@ -201,7 +230,7 @@
             currentSkin = data.currentSkin || 'default';
             ownedSkins = data.ownedSkins || { default: true };
             autoTap = data.autoTap || 0;
-            ownedBoosters = data.ownedBoosters || { 1: false, 2: false };
+            ownedBoosters = data.ownedBoosters || { 1: false, 2: false, 3: false };
             tokenCount.textContent = `${balance} токенов`;
             updateSkin();
             updateBoosterTexts();
@@ -273,7 +302,7 @@
           infoDiv.textContent = `Авто-Тап +${increment} (куплено)`;
           button.disabled = true;
         } else {
-          const price = increment * 50;
+          const price = increment === 3 ? 1000 : increment * 50;
           infoDiv.textContent = `Авто-Тап +${increment} (${price} токенов)`;
           button.disabled = false;
         }
@@ -306,6 +335,11 @@
     }
 
     window.addEventListener('DOMContentLoaded', () => {
+      setTimeout(() => {
+        loadingScreen.style.display = 'none';
+        gameContainer.style.display = 'flex';
+      }, 5000);
+
       if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
         Telegram.WebApp.ready();
         Telegram.WebApp.expand();
